<resources>
    <string name="app_name">Food Donation App (Admin)</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--  Login  -->
    <string name="food_donation_app">Food Donation App</string>
    <string name="admin_app">(Admin App)</string>
    <string name="login_name">Name</string>
    <string name="login_password">Password</string>
    <string name="login_btn">Login</string>

    <!--  Register  -->
    <string name="register_btn">Register</string>
    <string name="login_email">Email</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="create_user">Please fill in the registration form</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_profile_picture">User Profile Picture</string>
    <string name="upload_user_s_profile_picture">Upload user\'s profile picture</string>
    <string name="enter_user_name_here">Enter user name here</string>
    <string name="users">Users</string>
    <string name="navHeader_create_user">Create User</string>
    <string name="view_users">View Users</string>
    <string name="donations">Donations</string>
    <string name="view_donations">View Donations</string>
    <string name="view_ongoing_donations">View Ongoing Donations</string>
    <string name="requests">Requests</string>
    <string name="view_requests">View Requests</string>
    <string name="view_ongoing_requests">View Ongoing Requests</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="details_goes_here">Details goes here</string>
    <string name="date_goes_here">Date goes here</string>
    <string name="status_goes_here">Status goes here</string>
    <string name="transactions">Transactions</string>
    <string name="username_goes_here">userName goes here</string>
    <string name="email_goes_here">Email goes here</string>
    <string name="phone_number">Phone Number</string>
    <string name="request_details">Request details:</string>
    <string name="address_goes_here">Address goes here</string>
    <string name="request_address">Request Address:</string>
    <string name="preferred_delivery_date">Preferred delivery date:</string>
    <string name="time_goes_here">Time goes here</string>
    <string name="donation_details">Donation details:</string>
    <string name="donation_comments">Comments:</string>
    <string name="comments_goes_here">comments goes here</string>
    <string name="donation_date">Donation date:</string>
    <string name="image_goes_here">Image goes here</string>
    <string name="name_goes_here">Name goes here</string>
    <string name="recipient_name">Recipient name:</string>
    <string name="enter_your_email">Enter your email</string>
</resources>