<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/viewDonationsImageViewListItem"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_baseline_home_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/hiddenViewDonationsRequestID"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:visibility="invisible"/>

                <TextView
                    android:id="@+id/hiddenViewDonationsDonationID"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:visibility="invisible"/>

                <!-- Other details goes here -->
                <TextView
                    android:id="@+id/viewDonationsDetailsListItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_goes_here"

                    android:textSize="26sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/viewDonationsStatusListItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status_goes_here"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/viewDonationsDateListItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/date_goes_here"
                    android:textSize="18sp"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>